[package]
name = "rust-node-blank"
version = "0.1.0"
description = "Node.js add-on example written in Rust"
authors = ["Skitsanos"]
license = "MIT"
edition = "2024"
rust-version = "1.93"
exclude = ["bin/addon.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "1.1.1"
features = ["napi-latest"]
